apps/dev/todos-api/replica-count.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api-deployment
  namespace: default
spec:
  replicas: 3
